Changelog
=========

1.0 - Unreleased
----------------

* Format the sys.path changes in the wrapper to make it more
  human readable. This is purely cosmetic to help with debugging.
  [wichert]

* Also recreate the wsgi wrapper file when updating a buildout part.
  This is needed to get get changes to versions in the working set
  (such as different version pins) reflected in the wrapper.
  [wichert]


1.0b2 - June 13, 2008
---------------------

* Call the Eggs constructor as well: working_set() needs too many of the
  internal variables it sets for us to set them ourselves. This fixes
  the recipe breaking when using find-links in buildout.
  [wichert]


1.0b1 - June 13, 2008
---------------------

* Initial release
  [wichert]
